# RCRLab

./: Gluconeogenesis.txt  Preprocessing.ipynb  RCR.py  README.md  gluconeogenesis.tsv  setup.cfg  test.tsv  tox.ini
src/dfs_rcr/: RCR.py  __init__.py  cli.py
tests/: test_dfs_rcr.py  test_graph.pkl  test_hyp.pkl  test_mixed_model.pkl
