##########################
# Setup.py Configuration #
##########################
[metadata]
name = dfs_rcr
version = 0.0.1-dev
description = Depth First Search based Reverse Causal Reasoning model
long_description = file: README.md
long_description_content_type = text/markdown

# Author information
author = Vinay Bharadhwaj
author_email = s0vibhar@uni-bonn.de
maintainer = Vinay Bharadhwaj
maintainer_email = s0vibhar@uni-bonn.de

# License Information
license = See LICENSE file
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords = Bioinformatics, Reverse Causal Reasoning, Depth First Search, Networks, Pathways


[options]
install_requires =
    click==7.0
    pandas==1.0.1
    numpy==1.18.1
    rpy2==3.1.0
    statsmodels==0.11.0
    networkx==2.4

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    dfs_rcr = dfs_rcr.cli:cli

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = dfs_rcr

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
